tests/parser/invalidinput/tvct.idp
vocabulary V{
	type x
	p(x)
	f(x):x
}
structure S:V{
	x = {1..10}
	p = {1}
	p<ct> = {2}
}
procedure main(){
	return 1	
}
